tests/baselines/reference/nonPrimitiveUnionIntersection.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveUnionIntersection.ts(1,5): error TS2322: Type '""' is not assignable to type '实例 & 文字'.
  Type '""' is not assignable to type '实例'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveUnionIntersection.ts(3,5): error TS2322: Type '123' is not assignable to type '实例 & {}'.
  Type '123' is not assignable to type '实例'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveUnionIntersection.ts(4,1): error TS2322: Type '文字' is not assignable to type '实例 & 文字'.
  Type '文字' is not assignable to type '实例'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveUnionIntersection.ts(8,38): error TS2322: Type '{ bar: 文字; }' is not assignable to type '实例 & { err: 文字; }'.
  Object literal may only specify known properties, and 'bar' does not exist in type '实例 & { err: 文字; }'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveUnionIntersection.ts (4 errors) ====
    var a: object & string = ""; // error
        ~
!!! error TS2322: Type '""' is not assignable to type '实例 & 文字'.
!!! error TS2322:   Type '""' is not assignable to type '实例'.
    var b: object | string = ""; // ok
    var c: object & {} = 123; // error
        ~
!!! error TS2322: Type '123' is not assignable to type '实例 & {}'.
!!! error TS2322:   Type '123' is not assignable to type '实例'.
    a = b; // error
    ~
!!! error TS2322: Type '文字' is not assignable to type '实例 & 文字'.
!!! error TS2322:   Type '文字' is not assignable to type '实例'.
    b = a; // ok
    
    const foo: object & {} = {bar: 'bar'}; // ok
    const bar: object & {err: string} = {bar: 'bar'}; // error
                                         ~~~~~~~~~~
!!! error TS2322: Type '{ bar: 文字; }' is not assignable to type '实例 & { err: 文字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'bar' does not exist in type '实例 & { err: 文字; }'.
    